--- a/src/components/PostCard.css
+++ b/src/components/PostCard.css
@@ -18,3 +18,11 @@
   50% { transform: translate(-50%, -50%) scale(1.2); opacity: 0.8; }
   100% { transform: translate(-50%, -50%) scale(1); opacity: 0; }
 }
+
+video {
+  -webkit-tap-highlight-color: transparent;
+}
+
+video:not(.in-view) {
+  muted: true;
+}
